liteOS-M/rust_kernel/kernel/test/los_memory_c.h

#define OS_LITTLE_ENDIAN 4660
#define OS_BIG_ENDIAN 17185
#define OS_BYTE_ORDER 4660
#define LOS_OK 0
#define OS_FAIL 1
#define OS_64BIT_MAX -1
#define __LIBATOMIC_N_LOCKS 16
#define COMMON_ERRMODE 3
#define FREE_ERRORMODE 2
#define STORE_ERRMODE 1
#define LOAD_ERRMODE 0
#define LMS_SHADOW_BITS_PER_CELL 2
#define LMS_MEM_BYTES_PER_SHADOW_CELL 4
#define LMS_SHADOW_U8_CELL_NUM 4
#define LMS_SHADOW_U8_REFER_BYTES 16
#define LMS_SHADOW_ACCESSIBLE 0
#define LMS_SHADOW_AFTERFREE 3
#define LMS_SHADOW_REDZONE 2
#define LMS_SHADOW_PAINT 1
#define LMS_SHADOW_MASK 3
#define LMS_SHADOW_ACCESSIBLE_U8 0
#define LMS_SHADOW_AFTERFREE_U8 255
#define LMS_SHADOW_REDZONE_U8 170
#define LMS_SHADOW_MASK_U8 255
#define LMS_SHADOW_PAINT_U8 85
#define MEM_REGION_SIZE_1 1
#define MEM_REGION_SIZE_2 2
#define MEM_REGION_SIZE_4 4
#define MEM_REGION_SIZE_8 8
#define MEM_REGION_SIZE_16 16
typedef int INT32;
typedef unsigned int UINTPTR;
typedef unsigned int UINT32;
typedef char CHAR;
typedef unsigned short UINT16;
typedef unsigned char UINT8;
typedef unsigned long long UINT64;
/**
 * @ingroup los_list
 * Structure of a node in a doubly linked list.
 */
typedef struct LOS_DL_LIST {
  /**
   *< Current node's pointer to the previous node
   */
  struct LOS_DL_LIST *pstPrev;
  /**
   *< Current node's pointer to the next node
   */
  struct LOS_DL_LIST *pstNext;
} LOS_DL_LIST;
typedef unsigned int BOOL;
extern void OsLmsInit(void);
extern void OsLmsCheckValid(UINTPTR checkAddr, BOOL isFreeCheck);
extern void OsLmsLosMallocMark(const void *curNodeStart,
                               const void *nextNodeStart,
                               UINT32 nodeHeadSize);
extern void OsLmsLosFreeMark(const void *curNodeStart,
                             const void *nextNodeStart,
                             UINT32 nodeHeadSize);
extern void OsLmsSimpleMark(UINTPTR startAddr, UINTPTR endAddr, UINT32 value);
extern void OsLmsPrintPoolListInfo(void);
extern void OsLmsReportError(UINTPTR p, UINT32 size, UINT32 errMod);
extern void CheckValid(const CHAR *dest, const CHAR *src);
extern void __asan_store1_noabort(UINTPTR p);
extern void __asan_store4_noabort(UINTPTR p);
extern void __asan_load4_noabort(UINTPTR p);
extern void __asan_load1_noabort(UINTPTR p);
extern void __asan_loadN_noabort(UINTPTR p, UINT32 size);
extern void __asan_storeN_noabort(UINTPTR p, UINT32 size);
extern void __asan_store2_noabort(UINTPTR p);
extern void __asan_load2_noabort(UINTPTR p);
extern void __asan_store8_noabort(UINTPTR p);
extern void __asan_load8_noabort(UINTPTR p);
extern void __asan_load16_noabort(UINTPTR p);
extern void __asan_store16_noabort(UINTPTR p);
extern void __asan_handle_no_return(void);